# poopenaut_valley

./: .directory  .gitignore  Segmentation.pro  Segmentation.pro.user.7a97062  Segmentation.pro.user.95536f8  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_label.cpp  my_label.h  mywidget.cpp  mywidget.h  segmenter.cpp  segmenter.h
apps/: CMakeLists.txt
cmake/: buildTargets.cmake  compilerDefOpt.cmake
seg_src/: CMakeLists.txt  Segmentation.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywidget.cpp  mywidget.h  segmenter.cpp  segmenter.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
